# RobotsAndCones

./: conv  test
Aria/: README.txt
Aria/examples/: gpsRobotTaskExample.cpp
Code/src/: Kieran_InitialGpsTest.cpp  Makefile
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh
catkin_ws/devel/include/phidgets_msgs/: EncoderDecimatedSpeed.h  SetAnalogOutputRequest.h  SetAnalogOutputResponse.h  SetDigitalOutputRequest.h  SetDigitalOutputResponse.h
catkin_ws/devel/lib/NaughtyRobot/: gps_heading  gps_testing  main_node  obstacle_avoidance
catkin_ws/devel/lib/depthai_examples/: crop_control_service  mobilenet_node  rgb_node  rgb_stereo_node  rgb_subscriber_node  stereo_inertial_node  stereo_node
catkin_ws/devel/lib/joy/: joy_node
catkin_ws/devel/lib/pkgconfig/: NaughtyRobot.pc  cv_bridge.pc  depthai_bridge.pc  depthai_examples.pc  depthai_ros_msgs.pc  image_geometry.pc  joy.pc  libphidget22.pc  opencv_tests.pc  phidgets_accelerometer.pc  phidgets_analog_inputs.pc  phidgets_analog_outputs.pc  phidgets_api.pc  phidgets_digital_inputs.pc  phidgets_digital_outputs.pc  phidgets_gyroscope.pc  phidgets_high_speed_encoder.pc  phidgets_ik.pc  phidgets_magnetometer.pc  phidgets_motors.pc  phidgets_msgs.pc  phidgets_spatial.pc  phidgets_temperature.pc  ps3joy.pc  spacenav_node.pc
catkin_ws/devel/lib/ps3joy/: sixpair
catkin_ws/devel/lib/spacenav_node/: spacenav_node
catkin_ws/devel/share/NaughtyRobot/cmake/: NaughtyRobotConfig.cmake
catkin_ws/devel/share/cv_bridge/cmake/: cv_bridgeConfig.cmake
catkin_ws/devel/share/depthai_bridge/cmake/: depthai_bridgeConfig.cmake
catkin_ws/devel/share/depthai_examples/cmake/: depthai_examplesConfig.cmake
catkin_ws/devel/share/depthai_examples/markerPublisher/: markerPublisher.py
catkin_ws/devel/share/depthai_ros_msgs/cmake/: depthai_ros_msgs-msg-paths.cmake  depthai_ros_msgsConfig.cmake
catkin_ws/devel/share/image_geometry/cmake/: image_geometryConfig.cmake
catkin_ws/devel/share/joy/cmake/: joyConfig.cmake
catkin_ws/devel/share/libphidget22/cmake/: libphidget22Config.cmake
catkin_ws/devel/share/opencv_tests/cmake/: opencv_testsConfig.cmake
catkin_ws/devel/share/phidgets_accelerometer/cmake/: phidgets_accelerometerConfig.cmake
catkin_ws/devel/share/phidgets_ik/cmake/: phidgets_ikConfig.cmake
catkin_ws/src/NaughtyRobot/: CMakeLists.txt  package.xml
catkin_ws/src/NaughtyRobot/launch/: main.launch
catkin_ws/src/NaughtyRobot/src/: .main_node.cpp.swp  colour_detection.py  example_code.cpp  gps_heading.cpp  gps_testing.cpp  main_node.cpp  object_recognition.py  obstacle_avoidance.cpp  obstacle_avoidance.py
(+21 files in other folders)
